# gwyneth

./: .gitignore  Cargo.toml  Dockerfile
crates/_gwyneth/: Cargo.toml  genesis.json
crates/_gwyneth/src/: builder.rs  cli.rs  exex.rs  lib.rs
crates/cli/commands/: Cargo.toml
crates/cli/commands/src/: ext.rs  lib.rs  node.rs
crates/consensus/beacon/: Cargo.toml
crates/consensus/beacon/src/engine/: handle.rs  mod.rs
crates/engine/local/: Cargo.toml
crates/engine/local/src/: payload.rs
crates/engine/service/: Cargo.toml
crates/engine/service/src/: service.rs
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/tree/: mod.rs
crates/ethereum/engine-primitives/src/: lib.rs
crates/ethereum/evm/src/: execute.rs
crates/ethereum/node/src/: node.rs
crates/ethereum/node/tests/e2e/: dev.rs
crates/ethereum/payload/src/: lib.rs
crates/evm/src/: test_utils.rs
crates/exex/exex/src/: manager.rs
crates/exex/types/: Cargo.toml
crates/exex/types/src/: notification.rs
crates/gwyneth/: Cargo.toml
crates/gwyneth/src/: builder.rs  cli.rs  engine_api.rs  exex.rs  lib.rs  rpc.rs  tmp.rs
crates/net/network/src/: manager.rs  network.rs
crates/node/api/src/: node.rs
crates/node/builder/src/: node.rs  rpc.rs
crates/node/builder/src/builder/: mod.rs  states.rs
crates/node/builder/src/components/: builder.rs
crates/node/builder/src/launch/: engine.rs  mod.rs
crates/node/core/src/args/: payload_builder.rs  rpc_server.rs
crates/payload/basic/src/: lib.rs
crates/payload/builder/src/: service.rs
crates/payload/primitives/src/: lib.rs
crates/primitives/src/: lib.rs
crates/primitives/src/transaction/: compat.rs
crates/rpc/ipc/src/server/: mod.rs
crates/rpc/rpc-eth-api/src/helpers/: transaction.rs
crates/rpc/rpc-eth-types/src/cache/: db.rs
crates/rpc/rpc/src/: debug.rs
crates/rpc/rpc/src/eth/: core.rs  pubsub.rs
crates/rpc/rpc/src/eth/helpers/: types.rs
crates/storage/provider/src/: lib.rs
crates/storage/provider/src/test_utils/: blocks.rs
crates/storage/storage-api/src/: state.rs
crates/transaction-pool/src/: lib.rs
crates/transaction-pool/src/validate/: eth.rs
crates/trie/common/src/: nibbles.rs  root.rs
crates/trie/common/src/hash_builder/: state.rs
examples/custom-dev-node/src/: main.rs
examples/custom-engine-types/: Cargo.toml
examples/custom-engine-types/src/: builder.rs  cli.rs  main.rs  node.rs
examples/custom-evm/src/: main.rs
examples/custom-node-components/src/: main.rs
