[package]
name = "gwyneth"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth-chainspec.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-consensus.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-node-ethereum = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-trie-db.workspace = true
reth-rpc-api.workspace = true
reth-rpc.workspace = true
reth-rpc-types-compat.workspace = true
reth-rpc-layer.workspace = true
reth-network.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }
futures.workspace = true
revm.workspace = true
reth-revm.workspace = true
reth-exex.workspace = true
reth-ethereum-cli.workspace = true
reth-engine-local.workspace = true

eyre.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
jsonrpsee.workspace = true

alloy-consensus.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives.workspace = true
reth-chain-state.workspace = true
reth-transaction-pool.workspace = true
reth-trie.workspace = true
reth-execution-types.workspace = true
reth-provider.workspace = true
reth-errors.workspace = true
reth-node-builder.workspace = true
reth-tasks.workspace = true
reth-db.workspace = true
reth-rpc-builder.workspace = true
reth-cli-commands.workspace = true

tracing.workspace = true
serde_json.workspace = true
clap.workspace = true

